# gimp-plugin-astronomy

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.mingw  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  config.h.win32  configure  configure.in  intltool-update
doc/: Makefile.am  Makefile.in  documentation.tex
po/: LINGUAS  Makefile.in.in  POTFILES  POTFILES.in  de.gmo  de.po  ru.gmo  ru.po
release/: astronomy-alignment  astronomy-artificial-galaxy  astronomy-artificial-stars  astronomy-background-gradient  astronomy-merge  astronomy-star-rounding
scripts/: Makefile.am  Makefile.in  background_gradient_batch.scm  border_information.scm  brightness_contrast_batch.scm  dark_subtraction.scm  flat_division.scm  mode_batch.scm  normalize_batch.scm
src/: Makefile.am  Makefile.in  alignment.c  alignment_autopano.c  artificial_galaxy.c  artificial_stars.c  artificial_stars_temperature.h  background_gradient.c  config.h  merge.c  star_rounding.c
src/.deps/: alignment.Po
