## Process this file with automake to produce Makefile.in

SUBDIRS = po scripts src doc

EXTRA_DIST = \
	autogen.sh \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	Makefile.mingw \
	config.h.win32

AUTOMAKE_OPTIONS = foreign dist-bzip2

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update