## Process this file with automake to produce Makefile.in

scriptdir = $(GIMP_DATADIR)/scripts
script_DATA = \
	border_information.scm \
	brightness_contrast_batch.scm \
	dark_subtraction.scm \
	flat_division.scm \
	mode_batch.scm \
	normalize_batch.scm \
	background_gradient_batch.scm

EXTRA_DIST = \
	border_information.scm \
	brightness_contrast_batch.scm \
	dark_subtraction.scm \
	flat_division.scm \
	mode_batch.scm \
	normalize_batch.scm \
	background_gradient_batch.scm